<resources>
    <string name="app_name">Github User\'s API</string>
    <string name="nama_user">Nama</string>
    <string name="username">Username</string>
    <string name="cari_user">Cari User</string>
    <string name="repository">Repository: 100</string>
    <string name="follower">Follower: 100</string>
    <string name="following">Following: 100</string>
    <string name="tab_text_1">FOLLOWER</string>
    <string name="tab_text_2">FOLLOWING</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_1">Credit</string>
    <string name="owner">Gira Muhammmad Nur Icharisma</string>
</resources>